--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+	<fb:login-button 
+	  scope="public_profile,email"
+	  onlogin="checkLoginState();">
+	</fb:login-button>
+
+
 	
 
 
